[tool.poetry]
name = "dash-first"
version = "0.1.0"
description = ""
authors = ["Andrew <balshowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.1"
dash-bootstrap-components = "^1.5.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
